--- a/content/main.css
+++ b/content/main.css
@@ -22,6 +22,14 @@ Main stylesheet
 	margin-left: 15px;
 }
 
+.nicepanel1{
+	background-color:#FFFF80;
+}
+
+.nicepanel1:hover{
+	background-color:#FFFFB8;
+}
+
 .alternate:nth-child(odd) {
    background-color:#FFFF80;
 }
