JS all working good - MVC kind of to do

--- a/content/main.css
+++ b/content/main.css
@@ -43,3 +43,15 @@ Main stylesheet
 .question-background {
 . background-color : #FFFFB8;
 }
+
+.addAnswer {
+    font-size: x-large;
+    padding-left: 6px;
+    padding-right: 6px;
+}
+
+.removeQuestion {
+    font-size: x-large;
+    padding-left: 6px;
+    padding-right: 6px;
+}
